# 3D-vision-Benchmarking-Spatial-and-State-Reasoning-Skills-of-VLMs-for-Robotics

./: .gitignore  ACTION_PHASE_DATASET_PLAN.md  ANALYSIS.md  CLAUDE.md  NOTES.md  README.md  REPORT_PLAN.md  Run_minimal_inference_in_colab.ipynb  annotation_instructions.md  mutagen.yml  pyproject.toml  requirements.txt  results_for_test_prompt.jsonl  scenes.txt  scenes_diverse.txt  scenes_diverse_ranked.jsonl  scenes_first.txt  scenes_first_ranked.jsonl  scenes_ranked.jsonl  slurm-64668.err  slurm-92579.err  slurm-92756.err  slurm-92759.err  slurm-92952.err  slurm-92990.err  slurm-92991.err  slurm-93028.err  slurm-93049.err  slurm-93090.err  slurm-93146.err  slurm-93216.err  slurm-93217.err  slurm-93218.err  slurm-93220.err  slurm-93264.err  slurm-93279.err  slurm-93385.err  slurm-93631.err  slurm-93632.err  slurm-93647.err  (+40 more)
analysis/: questions_with_answers_test.txt
curated/: buckets.yaml
dataset_analysis/: answer_categories_test.txt  config(1).json  droid_index.json  question_templates_test.txt  question_type_issues.txt  question_type_overlaps_test.txt  results(4).jsonl  summary.json
poster_3_D/: poster.tex
project-proposal/: draft.tex  main.tex
report/: main.bib  main.brf  main.tex
scenes/: scene_droid_align_the_rope_along_the_middle_of_the_black_object_10648.jsonl  scene_droid_arrange_the_cushions__one_in_front_of_the_other__against_the_arm_rest_5010.jsonl  scene_droid_attach_the_discs_on_the_table_to_the_wooden_rack_making_sure_to_sort_them_by_color_13876.jsonl  scene_droid_close_then_reopen_the_lid_of_the_machine_9041.jsonl  (+122 more)
scripts/: analyze_results.py  (+99 more)
(+63 files in other folders)
